@@ -16,6 +16,7 @@
 * Use KRatingWidget
 * When adding new default value to a field, offer to insert value in existing entries
 * Centralize all the optional fields inside CollectionManager so the names are ensured to stay consistent. Add UI for adding to collection outside of fetcher results.
+* Save the group view sorting in the config file and reload
 
 === Bugs
 * Make sure all usages of FileRef* delete the pointer
